--- a/home.html
+++ b/home.html
@@ -79,6 +79,74 @@
         ><i class="fa fa-bars"></i
       ></a>
     </div>
+    <div>
+      Rent a Self Storage Unit<br />
+      Up to 25% Off Monthly Rent<br />
+      Rent Online Contact Free Today<br />
+      <div>
+        <button>Location Near Me</button> or
+        <input type="text" placeholder="Enter Zip, City or state" />
+        <input type="submit" value="Search" />
+        <br />
+        or try <a href="#">Advanced Search</a>
+      </div>
+      trending: <a href="#">Boston</a> |<a href="#">Brooklyn</a> |<a href="#"
+        >Queens</a
+      >
+      |<a href="#">Miami</a> |<a href="#">Dallas</a> |<a href="#">Houston</a>
+      |<a href="#">Denver</a> |<a href="#">Chicago</a> |<a href="#">Atlanta</a>
+    </div>
+
+    <div>
+      Rent online and move In Contact-Free<br />
+      1. Find storage that fits your needs 2. Complete your agreement online 3.
+      Get access and move in 4. Download the<a href="#">CubeSmart Mobile App</a
+      ><br />
+      Our online rental process is quick, convenient and contact-free. No need
+      to check in at the office ‐ get access and move in today.<br />
+      <button>Learn More</button>
+      <button>Watch Video</button>
+    </div>
+    <div class="features">
+      <div>
+        <i class="fas fa-tags"></i><br />Storage Deals<br />
+        We offer free moving trucks, referral discounts, military discounts, and
+        more. Find the deal that’s right for you.<br /><a href="#"
+          >Get storage deals</a
+        >
+      </div>
+      <div>
+        <i class="fas fa-thermometer-quarter"></i><br />Climate Controlled<br />Need
+        a little extra comfort for you and your stuff? Consider our climate
+        controlled units.<br />
+        <a href="#">Find Climate Controlled Storage Near You</a>
+      </div>
+      <div>
+        <i class="fas fa-car"></i><br />Vehicle Storage<br />Garage a little
+        stuffy? Consider vehicle storage—from parking spots to enclosed
+        units—for your car, RV, motorcycle, and more.<br /><a href="#"
+          >Find vehicle storage near me</a
+        >
+      </div>
+    </div>
+
+    <div class="ytBox">
+      <div class="ytBoxItem">
+        <div class="videobox">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/j1Y8JlviCQA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+      <div class="ytBoxItem">Goodbye, chaos.<br />Hello,self storage</div>
+    </div>
+
     <div class="content">
       <h1>10860 Tower Oaks Blvd,Houston TX, 77070(832) 331-8059</h1>
       <h2>Company</h2>
