--- a/home.html
+++ b/home.html
@@ -147,6 +147,50 @@
       <div class="ytBoxItem">Goodbye, chaos.<br />Hello,self storage</div>
     </div>
 
+    <div class="feedback">
+      <div class="feedback-item">
+        “Everyone on the staff is very knowledgeable and very helpful. Very
+        happy with my choice here!”
+
+        <br /><b>CubeSmart Customer</b><br />Bolingbrook, IL
+      </div>
+      <div class="feedback-item">
+        "Always clean. The customer service at the front desk is always polite
+        and helpful."
+
+        <br /><b>CubeSmart Customer</b><br />
+        Bronx, NY
+      </div>
+      <div class="feedback-item">
+        "I feel very comfortable and confident in using this storage facility.
+        Thanks for such great customer service, security, and availability."
+
+        <br /><b>CubeSmart Customer</b><br />Charlotte, NC
+      </div>
+    </div>
+
+    <div class="blog">
+      <div>
+        Self Storage Tips Not sure what size storage unit you need? Our Unit
+        Size Guide makes choosing the right size stress-free. Let us help you
+        figure out how big of a storage unit you’ll need. Find the right storage
+        size Frequently Asked Questions What is a drive-up unit?
+      </div>
+      <div>
+        Self Storage Management CubeSmart’s property management program provides
+        extensive operational and managerial support to ensure your investment
+        is well-managed. Learn more
+      </div>
+      <div>
+        We're Hiring CubeSmart teammates strive to make our customers’ lives
+        easier with innovative self-storage solutions, award-winning customer
+        service, and genuine care. And we work together, as a team, to make
+        fellow teammates’ lives easier, too. It’s what elevates a career at
+        CubeSmart above other jobs–storage, retail, customer service, corporate…
+        you name it. Come grow with CubeSmart
+      </div>
+    </div>
+
     <div class="content">
       <h1>10860 Tower Oaks Blvd,Houston TX, 77070(832) 331-8059</h1>
       <h2>Company</h2>
