--- a/home.html
+++ b/home.html
@@ -149,23 +149,56 @@
 
     <div class="feedback">
       <div class="feedback-item">
-        “Everyone on the staff is very knowledgeable and very helpful. Very
-        happy with my choice here!”
+        <div>
+          <img
+            src="images/2.jpg"
+            alt="Snow"
+            object-fit="fill"
+            width="100%"
+            height="100%"
+          />
+        </div>
+        <div class="feedback-text">
+          “Everyone on the staff is very knowledgeable and very helpful. Very
+          happy with my choice here!”
 
-        <br /><b>CubeSmart Customer</b><br />Bolingbrook, IL
+          <br /><b>CubeSmart Customer</b><br />Bolingbrook, IL
+        </div>
       </div>
       <div class="feedback-item">
-        "Always clean. The customer service at the front desk is always polite
-        and helpful."
+        <div>
+          <img
+            src="images/3.jpg"
+            alt="Snow"
+            object-fit="fill"
+            width="100%"
+            height="100%"
+          />
+        </div>
+        <div class="feedback-text">
+          "Always clean. The customer service at the front desk is always polite
+          and helpful."
 
-        <br /><b>CubeSmart Customer</b><br />
-        Bronx, NY
+          <br /><b>CubeSmart Customer</b><br />
+          Bronx, NY
+        </div>
       </div>
       <div class="feedback-item">
-        "I feel very comfortable and confident in using this storage facility.
-        Thanks for such great customer service, security, and availability."
+        <div>
+          <img
+            src="images/1.jpg"
+            alt="Snow"
+            object-fit="fill"
+            width="100%"
+            height="100%"
+          />
+        </div>
+        <div class="feedback-text">
+          "I feel very comfortable and confident in using this storage facility.
+          Thanks for such great customer service, security, and availability."
 
-        <br /><b>CubeSmart Customer</b><br />Charlotte, NC
+          <br /><b>CubeSmart Customer</b><br />Charlotte, NC
+        </div>
       </div>
     </div>
 
