--- a/home.html
+++ b/home.html
@@ -108,73 +108,89 @@
       <button>Watch Video</button>
     </div>
     <div class="features">
-      <div>
-        <svg
-          aria-hidden="true"
-          focusable="false"
-          data-prefix="fas"
-          data-icon="tags"
-          class="svg-inline--fa fa-tags fa-w-20"
-          role="img"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 640 512"
-          height="2rem"
-          width="2rem"
-        >
-          <path
-            fill="currentColor"
-            d="M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z"
-          ></path>
-        </svg>
-        <br />Storage Deals<br />
-        We offer free moving trucks, referral discounts, military discounts, and
-        more. Find the deal that’s right for you.<br /><a href="#"
-          >Get storage deals</a
-        >
+      <div class="features-item">
+        <div>
+          <svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fas"
+            data-icon="tags"
+            class="svg-inline--fa fa-tags fa-w-20"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 640 512"
+            height="2rem"
+            width="2rem"
+          >
+            <path
+              fill="currentColor"
+              d="M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <br />Storage Deals<br />
+          We offer free moving trucks, referral discounts, military discounts,
+          and more. Find the deal that’s right for you.<br /><a href="#"
+            >Get storage deals</a
+          >
+        </div>
       </div>
-      <div>
-        <svg
-          aria-hidden="true"
-          focusable="false"
-          data-prefix="fas"
-          data-icon="thermometer-quarter"
-          class="svg-inline--fa fa-thermometer-quarter fa-w-8"
-          role="img"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 256 512"
-          height="2rem"
-          width="2rem"
-        >
-          <path
-            fill="currentColor"
-            d="M192 384c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-23.685 12.876-44.349 32-55.417V288c0-17.673 14.327-32 32-32s32 14.327 32 32v40.583c19.124 11.068 32 31.732 32 55.417zm32-84.653c19.912 22.563 32 52.194 32 84.653 0 70.696-57.303 128-128 128-.299 0-.609-.001-.909-.003C56.789 511.509-.357 453.636.002 383.333.166 351.135 12.225 321.755 32 299.347V96c0-53.019 42.981-96 96-96s96 42.981 96 96v203.347zM208 384c0-34.339-19.37-52.19-32-66.502V96c0-26.467-21.533-48-48-48S80 69.533 80 96v221.498c-12.732 14.428-31.825 32.1-31.999 66.08-.224 43.876 35.563 80.116 79.423 80.42L128 464c44.112 0 80-35.888 80-80z"
-          ></path>
-        </svg>
-        <br />Climate Controlled<br />Need a little extra comfort for you and
-        your stuff? Consider our climate controlled units.<br />
-        <a href="#">Find Climate Controlled Storage Near You</a>
+
+      <div class="features-item">
+        <div>
+          <svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fas"
+            data-icon="thermometer-quarter"
+            class="svg-inline--fa fa-thermometer-quarter fa-w-8"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 256 512"
+            height="2rem"
+            width="2rem"
+          >
+            <path
+              fill="currentColor"
+              d="M192 384c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-23.685 12.876-44.349 32-55.417V288c0-17.673 14.327-32 32-32s32 14.327 32 32v40.583c19.124 11.068 32 31.732 32 55.417zm32-84.653c19.912 22.563 32 52.194 32 84.653 0 70.696-57.303 128-128 128-.299 0-.609-.001-.909-.003C56.789 511.509-.357 453.636.002 383.333.166 351.135 12.225 321.755 32 299.347V96c0-53.019 42.981-96 96-96s96 42.981 96 96v203.347zM208 384c0-34.339-19.37-52.19-32-66.502V96c0-26.467-21.533-48-48-48S80 69.533 80 96v221.498c-12.732 14.428-31.825 32.1-31.999 66.08-.224 43.876 35.563 80.116 79.423 80.42L128 464c44.112 0 80-35.888 80-80z"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <br />Climate Controlled<br />Need a little extra comfort for you and
+          your stuff? Consider our climate controlled units.<br />
+          <a href="#">Find Climate Controlled Storage Near You</a>
+        </div>
       </div>
-      <div>
-        <svg
-          aria-hidden="true"
-          focusable="false"
-          data-prefix="fas"
-          data-icon="car"
-          class="svg-inline--fa fa-car fa-w-16"
-          role="img"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 512 512"
-          height="2rem"
-          width="2rem"
-        >
-          <path
-            fill="currentColor"
-            d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z"
-          ></path>
-        </svg>
-        <br />Vehicle Storage<br />Garage a little stuffy? Consider vehicle
-        storage—from parking spots to enclosed units—for your car, RV,
-        motorcycle, and more.<br /><a href="#">Find vehicle storage near me</a>
+
+      <div class="features-item">
+        <div>
+          <svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fas"
+            data-icon="car"
+            class="svg-inline--fa fa-car fa-w-16"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            height="2rem"
+            width="2rem"
+          >
+            <path
+              fill="currentColor"
+              d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <br />Vehicle Storage<br />Garage a little stuffy? Consider vehicle
+          storage—from parking spots to enclosed units—for your car, RV,
+          motorcycle, and more.<br /><a href="#"
+            >Find vehicle storage near me</a
+          >
+        </div>
       </div>
     </div>
 
@@ -272,100 +288,6 @@
       </div>
     </div>
 
-    <div class="content">
-      <h1>10860 Tower Oaks Blvd,Houston TX, 77070(832) 331-8059</h1>
-      <h2>Company</h2>
-      <br />
-
-      <!-- Trigger the Modal -->
-      <img
-        id="myImg"
-        src="images/1.jpg"
-        alt="Snow"
-        style="width: 100%; max-width: 300px"
-      />
-      <img
-        id="myImg"
-        src="images/2.jpg"
-        alt="Snow"
-        style="width: 100%; max-width: 300px"
-      />
-      <img
-        id="myImg"
-        src="images/3.jpg"
-        alt="Snow"
-        style="width: 100%; max-width: 300px"
-      />
-      <img
-        id="myImg"
-        src="images/4.jpg"
-        alt="Snow"
-        style="width: 100%; max-width: 300px"
-      />
-      <img
-        id="myImg"
-        src="images/5.jpg"
-        alt="Snow"
-        style="width: 100%; max-width: 300px"
-      />
-
-      <!-- The Modal -->
-      <div id="myModal" class="modal">
-        <!-- The Close Button -->
-        <span class="close">&times;</span>
-
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img01" />
-
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption"></div>
-      </div>
-
-      <a
-        class="client-hold-button"
-        style="background-color: rgb(8, 138, 9); opacity: 1"
-        id="sparefootBooking_106554"
-        >Reserve Unit</a
-      >
-      <p>
-        "Extra space for living or working" Have you ever wished that your house
-        was uncluttered? Do you dream of a larger workspace? Are you between
-        homes, or maybe inheriting furniture that you can't find space for at
-        the moment?
-      </p>
-      <p>
-        Storage Solutions Plus provides you with clean, dry and secure storage
-        rooms that you can lock with your own padlock in whatever size you need.
-        The possibilities for storing your belongings are almost limitless
-
-        <br /><b>Convenient Location</b>
-        <b>Video Monitors</b>
-        On site observation cameras. Digital video monitoring station.
-        <br />
-        <b>Packing & Moving Supplies</b> - Convenient supplies available for all
-        your packing needs.
-      </p>
-      <p>
-        <b>Reinforced Steel Doors</b> - Attractive and the most reliable in the
-        industry.
-
-        <br />
-        <b>Gate Access</b> - Customers are assigned individual code. Interior &
-        Exterior Lighting - Ample and timed property lighting.
-      </p>
-      <p>
-        <b>Peace of Mind</b>- You'll rest easy knowing that your important
-        possessions are housed in a clean, storage facility with computerized
-        security and alarm systems. Staff Members are always available to help.
-        Our professional storage consultants are happy to answer your questions
-        and help you select the storage unit best suited to your particular
-        requirements.
-      </p>
-      <br />
-      <div class="bottom-gyan">
-        <b>When it comes to self-storage, we have the solutions!</b>
-      </div>
-    </div>
     <footer>
       <p><a href="www.facebook.com">Facebook</a></p>
       <p>© 2018. Storagesolutionsplus.com. All Rights Reserved</p>
