--- a/home.html
+++ b/home.html
@@ -79,37 +79,19 @@
         ><i class="fa fa-bars"></i
       ></a>
     </div>
-    <div>
-      Rent a Self Storage Unit<br />
-      Up to 25% Off Monthly Rent<br />
-      Rent Online Contact Free Today<br />
-      <div>
-        <button>Location Near Me</button> or
-        <input type="text" placeholder="Enter Zip, City or state" />
-        <input type="submit" value="Search" />
-        <br />
-        or try <a href="#">Advanced Search</a>
-      </div>
-      trending: <a href="#">Boston</a> |<a href="#">Brooklyn</a> |<a href="#"
-        >Queens</a
-      >
-      |<a href="#">Miami</a> |<a href="#">Dallas</a> |<a href="#">Houston</a>
-      |<a href="#">Denver</a> |<a href="#">Chicago</a> |<a href="#">Atlanta</a>
+    <div class="banner">
+      <h1 class="banner-h1">Rent a Self Storage Unit</h1>
+      <br />
+      <h2 class="banner-h2">Up to 25% Off Monthly Rent</h2>
+      <br />
+      <h3 class="banner-h3">Rent Online Contact Free Today</h3>
+      <br />
+      <div></div>
     </div>
 
-    <div>
-      Rent online and move In Contact-Free<br />
-      1. Find storage that fits your needs 2. Complete your agreement online 3.
-      Get access and move in 4. Download the<a href="#">CubeSmart Mobile App</a
-      ><br />
-      Our online rental process is quick, convenient and contact-free. No need
-      to check in at the office ‐ get access and move in today.<br />
-      <button>Learn More</button>
-      <button>Watch Video</button>
-    </div>
     <div class="features">
       <div class="features-item">
-        <div>
+        <div class="featured-item-sub">
           <svg
             aria-hidden="true"
             focusable="false"
@@ -129,7 +111,7 @@
           </svg>
         </div>
         <div>
-          <br />Storage Deals<br />
+          Storage Deals<br />
           We offer free moving trucks, referral discounts, military discounts,
           and more. Find the deal that’s right for you.<br /><a href="#"
             >Get storage deals</a
@@ -138,7 +120,7 @@
       </div>
 
       <div class="features-item">
-        <div>
+        <div class="featured-item-sub">
           <svg
             aria-hidden="true"
             focusable="false"
@@ -158,14 +140,14 @@
           </svg>
         </div>
         <div>
-          <br />Climate Controlled<br />Need a little extra comfort for you and
-          your stuff? Consider our climate controlled units.<br />
+          Climate Controlled<br />Need a little extra comfort for you and your
+          stuff? Consider our climate controlled units.<br />
           <a href="#">Find Climate Controlled Storage Near You</a>
         </div>
       </div>
 
-      <div class="features-item">
-        <div>
+      <div class="features-item-l">
+        <div class="featured-item-sub">
           <svg
             aria-hidden="true"
             focusable="false"
@@ -185,7 +167,7 @@
           </svg>
         </div>
         <div>
-          <br />Vehicle Storage<br />Garage a little stuffy? Consider vehicle
+          Vehicle Storage<br />Garage a little stuffy? Consider vehicle
           storage—from parking spots to enclosed units—for your car, RV,
           motorcycle, and more.<br /><a href="#"
             >Find vehicle storage near me</a
@@ -267,29 +249,38 @@
     </div>
 
     <div class="blog">
-      <div>
-        Self Storage Tips Not sure what size storage unit you need? Our Unit
-        Size Guide makes choosing the right size stress-free. Let us help you
-        figure out how big of a storage unit you’ll need. Find the right storage
-        size Frequently Asked Questions What is a drive-up unit?
+      <div class="blog-item">
+        <h2>Self Storage Tips</h2>
+        <br />
+        <b>Not sure what size storage unit you need?</b>
+        <br />Our Unit Size Guide makes choosing the right size stress-free. Let
+        us help you figure out how big of a storage unit you’ll need. Find the
+        right storage size<br /><br />
+        <b>Frequently Asked Questions</b><br /><a href="#"
+          >What is a drive-up unit?</a
+        >
       </div>
-      <div>
-        Self Storage Management CubeSmart’s property management program provides
-        extensive operational and managerial support to ensure your investment
-        is well-managed. Learn more
+      <div class="blog-item">
+        <h2>Self Storage Management</h2>
+        <br />CubeSmart’s property management program provides extensive
+        operational and managerial support to ensure your investment is
+        well-managed.<br /><a href="#">Learn more</a>
       </div>
-      <div>
-        We're Hiring CubeSmart teammates strive to make our customers’ lives
-        easier with innovative self-storage solutions, award-winning customer
-        service, and genuine care. And we work together, as a team, to make
-        fellow teammates’ lives easier, too. It’s what elevates a career at
-        CubeSmart above other jobs–storage, retail, customer service, corporate…
-        you name it. Come grow with CubeSmart
+      <div class="blog-item">
+        <h2>We're Hiring</h2>
+        <br />CubeSmart teammates strive to make our customers’ lives easier
+        with innovative self-storage solutions, award-winning customer service,
+        and genuine care. And we work together, as a team, to make fellow
+        teammates’ lives easier, too. It’s what elevates a career at CubeSmart
+        above other jobs–storage, retail, customer service, corporate… you name
+        it.<br /><a href="#">Come grow with CubeSmart</a>
       </div>
     </div>
 
     <footer>
-      <p><a href="www.facebook.com">Facebook</a></p>
+      <p>
+        <a class="footer-link" href="www.facebook.com">Facebook</a>
+      </p>
       <p>© 2018. Storagesolutionsplus.com. All Rights Reserved</p>
     </footer>
     <script src="script.js"></script>
